wp-content/themes/dac-child_marketing_site/style.css
/* ... */
/*Tweak Bootstrap's default buttons */
.btn {
    border-radius: 3px;
}

.btn-primary,
.primary {
    background-color: #0063CB;
    border-color: #0044A8;
}

.btn-warning,
.warning {
	background-color: #DE8A10;
    border-color: #eea236;
}

/*** Navigation ***/

.navbar-nav > li {
	min-width: 125px;
	text-align: center;
}

.navbar-inverse {
    background-color: #DE8A10;  
    border-color: #C75C04;
}

@media screen and (min-width: 768px) {
	.sub-menu {
	    background-color: #DE8A10;  
	}
}

.navbar-inverse .navbar-nav a,
.navbar-inverse .navbar-brand {
    color: #fff !important;    
}

.navbar-inverse .navbar-brand:hover {
	color:#C75C04 !important;	
}

.navbar-inverse .navbar-nav a:hover {
	color:#C75C04 !important;	
	background: #fff !important;
}

.sub-menu a {
	color: #fff;
}

.menu-item a {
  font-size: 1.2em;
}

.navbar-inverse .navbar-brand {
  font-size: 1.5em;
  color: #3D464D !important;
  font-weight: 700;
  letter-spacing: 1px;
}

@media (max-width: 992px) {
  .navbar-inverse .navbar-brand {
    font-size: 1.3em;
  }
}

.current-menu-item > a, 
.current-menu-parent > a {
	background: #C75C04;
	color:#fff !important;	
}

.current-menu-item > a:hover, 
.current-menu-parent > a:hover {
	background: #fff !important;
	color:#C75C04 !important;	
} 


/*** Home Page ***/

.jumbotron {
    -webkit-background-size: 100% 100% !important;
    -moz-background-size: 100% 100% !important;
    -o-background-size: 100% 100% !important;
    background-size: cover !important;
    height: 650px;
    text-shadow: 1px 1px 5px rgba(0,0,0,.8);
    color: #fff;
    overflow: hidden;
    position: relative;
    padding-top: 150px;
}

@media (max-width: 991px) {
	.jumbotron {
	    height: 450px !important;
	    padding-top: 75px !important;
	}
}

@media (max-width: 544px) {
	.jumbotron {
	    height: 300px !important;
	    padding-top: 50px !important;
	}
}

.jumbotron .container {
	text-align: right;
}

.jumbotron h1 {
    color: #fff;
}

.jumbotron span.glyphicon {
    height: 40px;
    width: 40px;
    font-size: 3em;
    color: rgba(255,255,255,.8);
    position: absolute;
    top: 500px;
    left: 50%;
    margin-left: -20px;
}

.jumbotron span.glyphicon:hover {
    color: rgba(0,99,203,1);
}

.main-content {
    padding-top: 5rem;
    margin-bottom: 550px;
}

.main-content .col-md-4 {
    text-align: center;
    margin-bottom: 6rem;
}

@media (max-width: 991px) {
	.main-content .col-md-4 {
		padding-right: 10rem;
		padding-left: 10rem;
	}
}

@media (max-width: 544px) {
	.main-content .col-md-4 {
		padding-right: 5rem;
		padding-left: 5rem;
	}
}

@media (max-width: 450px) {
  .main-content .col-md-4 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

.main-content .col-md-4 img {
    height: 230px;
    width: 230px;
}

.main-content p:last-of-type {
    margin-top: 2rem;
}

.featurette:last-of-type {
	margin-bottom: 50px;
}

@media (min-width: 991px) {
	.featurette:last-of-type {
		margin-bottom: 0px;
	}
}


.featurette-divider {
  	margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

.featurette-divider:first-of-type {
	margin-top: 0;
}

/* Thin out the marketing headings */
.featurette-heading {
	font-weight: 300;
	line-height: 1;
	letter-spacing: -1px;
	margin-top: 30px !important;
}

@media (min-width: 768px) {
	.featurette-heading {
		font-size: 50px;
	}
}

@media (min-width: 992px) {
  	.featurette-heading {
    	margin-top: 120px;
  	}	
  	.featurette a.btn {
  		margin-bottom: 5rem;
  	}
}

/*** About ***/

.about-page.main-content {
	margin-bottom: 500px;
  width: 100%;
  padding: 0;
}

/* Fix responsive layout issues with main-content/footer on About page */
@media (min-width: 460px) {
	.main-content.about-page {
		margin-bottom: 450px;
	}
}
@media (min-width: 551px) {
	.main-content.about-page {
		margin-bottom: 500px;
	}
}
@media (min-width: 768px) {
  	.about-page.main-content {
		margin-bottom: 600px;
	}
}
@media (min-width: 880px) {
	.main-content {
		margin-bottom: 525px;
	}
}

.about-intro {
	border-top: 20px solid #DE8A10;
	background: url('images/climpek.png') repeat;
	padding: 4rem 0;
	text-align: center;
	color: #3D464F;
}

/** Timeline **/

/* A few tweaks to the top of the timeline section */
.timeline-container {
	padding-top: 4rem;
	text-align: center;
}
.timeline-intro {
	line-height: 1.6;
	margin-bottom: 5rem;
}


.timeline {
  position: relative;
  padding:4px 0 0 0;
  margin-top:22px;
  list-style: none;
}

/*.timeline>li:first-of-type {
  margin-top: 25rem;
}*/

.timeline>li:nth-child(even) {
  position: relative;
  margin-bottom: 50px;
  height: 180px;
  right:-100px;
}

.timeline>li:nth-child(odd) {
  position: relative;
  margin-bottom: 50px;
  height: 180px;
  left:-100px;
}

.timeline>li:before,
.timeline>li:after {
  content: " ";
  display: table;
}

.timeline>li:after {
  clear: both;
  min-height: 170px;
}

.timeline > li .timeline-panel {
  position: relative;
  float: left;
  width: 41%;
  padding: 0 20px 20px 30px;
  text-align: right;
}

.timeline>li .timeline-panel:before {
    right: auto;
    left: -15px;
    border-right-width: 15px;
    border-left-width: 0;
}

.timeline>li .timeline-panel:after {
    right: auto;
    left: -14px;
    border-right-width: 14px;
    border-left-width: 0;
}

.timeline>li .timeline-image {
    z-index: 100;
    position: absolute;
    left: 50%;
    border: 7px solid #3D464D;
    border-radius: 100%;
    background-color: #3D464D;
    /*box-shadow: 0 0 5px #3D464D;*/
    width: 200px;
    height: 200px;
    margin-left: -100px;
}

/*.timeline>li:nth-of-type(even) .timeline-image {
	border: 7px solid #DE8A10;
}
*/
.timeline>li .timeline-image h4 {
    margin-top: 12px;
    font-size: 10px;
    line-height: 14px;
}

.timeline>li.timeline-inverted>.timeline-panel {
    float: right;
    padding: 0 30px 20px 20px;
    text-align: left;
}

.timeline>li.timeline-inverted>.timeline-panel:before {
    right: auto;
    left: -15px;
    border-right-width: 15px;
    border-left-width: 0;
}
/* ... */

